# bluegent

./: Cargo.toml  README.md  default.nix  flake.nix
.github/workflows/: build.yml
misc/: bluegent.conf  disable-ssp.sh  reset-bt.sh
nix/: Crate.nix  nixos-module.nix  pkg.nix
src/: agent.rs  config.rs  dbus.rs  main.rs
