[package]
name = "bluegent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
env_logger = { version = "0.11.8", features = ["auto-color", "humantime"], default-features = false }
log = "0.4.28"
serde = { version = "1.0.221", features = ["derive"] }
smol = "2.0.2"
toml = { version = "0.9.5", default-features = false, features = ["parse", "serde", "std"] }
zbus = { version = "5.11.0", default-features = false, features = ["async-io"] }
